--- a/ChartInMVC/ChartInMVC/Views/Country/ViewCountry.cshtml
+++ b/ChartInMVC/ChartInMVC/Views/Country/ViewCountry.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2></h2>
+<h2 align="center">View Country</h2>
 
 <p>
     <a href="@Url.Action("AddCountry", "Country")" id="Add" class="btn btn-primary">Create New &nbsp;<i class="glyphicon glyphicon-plus"></i></a>
