--- a/ChartInMVC/ChartInMVC/Views/Dashbord/Index.cshtml
+++ b/ChartInMVC/ChartInMVC/Views/Dashbord/Index.cshtml
@@ -4,14 +4,79 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="row">
-        <div class="col-md-12">
-            <canvas id="myChart" width="800" height="400"></canvas>
-            <div id="legendChart" class="chart-legend"></div>
+
+<div Style="font-family: Corbel; font-size: small ;text-align:center " class="row">
+    <div>
+        <div style="width:100%;height:100%">
+            <canvas id="myChart" style="padding: 0;margin: auto;display: block; "> </canvas>
         </div>
     </div>
+</div>
+<div Style="font-family: Corbel; font-size: small ;text-align:center; " class="row">
+    <div>
+    </div>
+    <div>
+    </div>
+</div>
+
 @section Scripts {
-    <script type="text/javascript">
+
+    <script>
+
+        $.ajax({
+            type: "GET",
+            url: "/Dashbord/GetData/",
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+            success: function (chData) {
+                var aData = chData;
+                var aLabels = Name[0];
+                var aDatasets1 = QTY[1];
+                var dataT = {
+                    labels: aLabels,
+                    datasets: [{
+                        label: "Test Data",
+                        data: aDatasets1,
+                        fill: false,
+                        backgroundColor: ["rgba(54, 162, 235, 0.2)", "rgba(255, 99, 132, 0.2)", "rgba(255, 159, 64, 0.2)", "rgba(255, 205, 86, 0.2)", "rgba(75, 192, 192, 0.2)", "rgba(153, 102, 255, 0.2)", "rgba(201, 203, 207, 0.2)"],
+                        borderColor: ["rgb(54, 162, 235)", "rgb(255, 99, 132)", "rgb(255, 159, 64)", "rgb(255, 205, 86)", "rgb(75, 192, 192)", "rgb(153, 102, 255)", "rgb(201, 203, 207)"],
+                        borderWidth: 1
+                    }]
+                };
+                var ctx = $("#myChart").get(0).getContext("2d");
+                var myNewChart = new Chart(ctx, {
+                    type: 'bar',
+                    data: dataT,
+                    options: {
+                        responsive: true,
+                        title: { display: true, text: 'CHART.JS DEMO CHART' },
+                        legend: { position: 'bottom' },
+                        scales: {
+                            xAxes: [{ gridLines: { display: false }, display: true, scaleLabel: { display: false, labelString: '' } }],
+                            yAxes: [{ gridLines: { display: false }, display: true, scaleLabel: { display: false, labelString: '' }, ticks: { stepSize: 50, beginAtZero: true } }]
+                        },
+                    }
+                });
+            }
+        });
+
+
+    </script>
+
+
+
+
+
+
+    @*<script type="text/javascript">
+
+        
+
+
+
+
+
+
 
             var datachart = {
                 labels: [],
@@ -46,7 +111,7 @@
                     });
             });
 
-        </script>
+        </script>*@
 
 }
 
