--- a/ChartInMVC/ChartInMVC/Views/Dashbord/Index.cshtml
+++ b/ChartInMVC/ChartInMVC/Views/Dashbord/Index.cshtml
@@ -16,6 +16,10 @@
     <div>
     </div>
     <div>
+        @ViewBag.XRes
+        @ViewBag.GRes
+        @ViewBag.BRes
+        @ViewBag.MRes
     </div>
 </div>
 
